# ros_demo

./: .gitattributes  README.md  pt0_introduction.md  pt1_visualizing_a_lidar.md  pt2_visualizing_a_camera.md  pt3_putting_it_all_together.md  ros_demo.rosinstall  ros_system_diagram.dot
demo_sensor_config/: CMakeLists.txt  package.xml
demo_sensor_config/launch/: hokuyo_driver.launch  ouster_driver.launch
demo_sensor_config/yaml/: hokuyo_laser_config.yaml  ouster_driver_params.yaml
people_counter/: CMakeLists.txt  package.xml
people_counter/bag/: door_open_1.bag  door_open_2.bag
people_counter/cfg/: DoorStateDetector.cfg  PersonAtDoorDetector.cfg
people_counter/launch/: hokuyo_driver.launch  live.launch  offline.launch
people_counter/rviz/: lidar.rviz
people_counter/src/: DoorDetector.cpp  DoorDetector.hpp  DoorStateDetector.cpp  DoorStateDetector.hpp  PeopleCounter.cpp  PeopleCounter.hpp  PersonAtDoorDetector.cpp  PersonAtDoorDetector.hpp  door_detector_node.cpp  door_detector_nodelet.cpp  door_state_detector_node.cpp  people_counter_node.cpp  person_at_door_detector_node.cpp
