<?xml version="1.0"?>
<package format="2">
  <name>demo_sensor_config</name>
  <version>0.0.0</version>
  <description>
    Helper nodes, launch files, and runtime configuration for setting up sensors
  </description>
  <maintainer email="mlohrer@dataspeedinc.com">Michael Lohrer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>urg_node</exec_depend>

</package>
