<?xml version="1.0"?>
<package format="2">
  <name>people_counter</name>
  <version>0.0.0</version>
  <description>
    Count people coming in and out of a room
  </description>
  <maintainer email="ljlorenz@dataspeedinc.com">Lincoln Lorenz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>roslaunch</exec_depend>x

</package>
